[package]
name                 = "cab-runtime"
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
publish.workspace    = true
repository.workspace = true
version.workspace    = true

[lib]
path = "mod.rs"

[lints]
workspace = true

[dependencies]
cab-span.path   = "../span"
cab-syntax.path = "../syntax"
cab-util.path   = "../util"

cyn.path = "../../cyn"
dup      = { features = [ "arcstr", "bytes", "rpds" ], path = "../../dup" }
ust.path = "../../ust"

arcstr.workspace          = true
async-once-cell.workspace = true
async-trait.workspace     = true
bon.workspace             = true
bytes.workspace           = true
const-str.workspace       = true
dashmap.workspace         = true
derive_more.workspace     = true
num.workspace             = true
num_enum.workspace        = true
rpds.workspace            = true
rustc-hash.workspace      = true
smallvec.workspace        = true
stacksafe.workspace       = true
tokio.workspace           = true
vu128.workspace           = true
