[package]
name                 = "cab-syntax"
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
publish.workspace    = true
repository.workspace = true
version.workspace    = true

[lib]
path = "mod.rs"

[lints]
workspace = true

[dependencies]
cab-error.path = "../error"
cab-span.path  = "../span"
cab-util.path  = "../util"

dup.path = "../../dup"
ust.path = "../../ust"

cstree.workspace      = true
derive_more.workspace = true
enumset.workspace     = true
num.workspace         = true
paste.workspace       = true
peekmore.workspace    = true
phf.workspace         = true
smallvec.workspace    = true
