[package]
name                 = "cab-syntax"
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
publish.workspace    = true
repository.workspace = true
version.workspace    = true

[lib]
path = "mod.rs"

[lints]
workspace = true

[dependencies]
cab-span.path = "../span"
cab-util.path = "../util"

cyn.path = "../../cyn"
dup      = { features = [ "cstree" ], path = "../../dup" }
ust.path = "../../ust"

bon.workspace         = true
cstree.workspace      = true
derive_more.workspace = true
enumset.workspace     = true
num.workspace         = true
paste.workspace       = true
peekmore.workspace    = true
phf.workspace         = true
smallvec.workspace    = true
stacksafe.workspace   = true
