[package]
name                 = "cab-task"
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
publish.workspace    = true
repository.workspace = true
version.workspace    = true

[[bin]]
name = "cab-task"
path = "main.rs"

[lints]
workspace = true

[dependencies]
cab.path = "../"

cyn.path = "../../cyn"
ust.path = "../../ust"

clap.workspace  = true
tokio.workspace = true
which.workspace = true
