[package]
name                 = "dup-macros"
description          = "Cheap clone trait for distinguishing expensive clones from things that should have been Copy"
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
publish.workspace    = true
repository.workspace = true
version.workspace    = true

[lib]
path       = "mod.rs"
proc-macro = true

[lints]
workspace = true

[dependencies]
quote.workspace = true
syn.workspace   = true
